updated the text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
     <h2>To do list app</h2>
-    <p><em>Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
+    <p><em>Double click or use done button to mark an item off, click on delete button to delete an item, and drag items to reorder.</em></p>
     
     <form name="toDoList">
     <input type="text" id="input" name="ListItem" onfocus="this.value=''" value="Click here to add item">
